samples/_failures_safe/1761596596_1040cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f991f93b.c: In function ‘main’:
./samples/SAFE/__tmp_f991f93b.c:167:15: error: expected ‘;’ at end of input
  167 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_f991f93b.c:167:9: error: expected declaration or statement at end of input
  167 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_f991f93b.c:167:9: error: expected declaration or statement at end of input
